--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,14 @@
 
     <groupId>io.github.microsphere-projects</groupId>
     <artifactId>microsphere-build</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <name>Microsphere Build Project</name>
     <description>Microsphere Build Project</description>
 
     <properties>
+        <revision>0.0.1-SNAPSHOT</revision>
         <java.version>8</java.version>
         <resource.delimiter>@</resource.delimiter>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
