修正pom文件中maven-javadoc-plugin的配置

--- a/pom.xml
+++ b/pom.xml
@@ -462,7 +462,7 @@
                             <artifactId>maven-javadoc-plugin</artifactId>
                             <inherited>true</inherited>
                             <configuration>
-                                <additionalparam>-Xdoclint:none</additionalparam>
+                                <additionalOptions>-Xdoclint:none</additionalOptions>
                             </configuration>
                         </plugin>
                     </plugins>
