--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
         </developerConnection>
     </scm>
 
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
     <developers>
         <developer>
             <id>mercyblitz</id>
