--- a/pom.xml
+++ b/pom.xml
@@ -78,13 +78,19 @@
         <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
 
-        <flatten-maven-plugin.version>1.2.5</flatten-maven-plugin.version>
+        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
         <asciidoctor-maven-plugin.version>2.1.0</asciidoctor-maven-plugin.version>
         <docbkx-maven-plugin.version>2.0.17</docbkx-maven-plugin.version>
         <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
         <puppycrawl-tools-checkstyle.version>8.18</puppycrawl-tools-checkstyle.version>
         <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
 
+        <!-- flatten-maven-plugin -->
+        <flatten.dependency.mode>all</flatten.dependency.mode>
+        <flatten.mode>resolveCiFriendliesOnly</flatten.mode>
+        <updatePomFile>true</updatePomFile>
+
+        <!-- maven-checkstyle-plugin -->
         <disable.checks>true</disable.checks>
         <maven-checkstyle-plugin.failsOnError>true</maven-checkstyle-plugin.failsOnError>
         <maven-checkstyle-plugin.failOnViolation>true</maven-checkstyle-plugin.failOnViolation>
@@ -299,9 +305,9 @@
                     <inherited>true</inherited>
                     <configuration>
                         <embedBuildProfileDependencies>false</embedBuildProfileDependencies>
-                        <flattenDependencyMode>all</flattenDependencyMode>
-                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
-                        <updatePomFile>true</updatePomFile>
+                        <flattenDependencyMode>${flatten.dependency.mode}</flattenDependencyMode>
+                        <flattenMode>${flatten.mode}</flattenMode>
+                        <updatePomFile>${updatePomFile}</updatePomFile>
                         <pomElements>
                             <parent>expand</parent>
                             <distributionManagement>remove</distributionManagement>
