--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,14 @@
     </developers>
 
     <scm>
-        <url>https://github.com/microsphere-projects/microsphere-build</url>
-        <connection>scm:git:https://github.com/microsphere-projects/microsphere-build.git</connection>
-        <developerConnection>scm:git:ssh://github.com/microsphere-projects/microsphere-build.git</developerConnection>
+        <url>git@github.com:microsphere-projects/microsphere-build.git</url>
+        <connection>scm:git:${project.scm.url}</connection>
+        <developerConnection>scm:git:${project.scm.url}</developerConnection>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
-        <revision>0.0.6</revision>
+        <revision>0.0.7</revision>
         <java.version>8</java.version>
         <resource.delimiter>@</resource.delimiter>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -254,7 +255,7 @@
                                 <skip>${disable.checks}</skip>
                                 <configLocation>checkstyle/checkstyle.xml</configLocation>
                                 <suppressionsLocation>checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
-                                <encoding>UTF-8</encoding>
+                                <inputEncoding>UTF-8</inputEncoding>
                                 <consoleOutput>true</consoleOutput>
                                 <propertyExpansion>
                                     checkstyle.build.directory=${project.build.directory}
@@ -450,6 +451,10 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
+                        <configuration>
+                            <scmCommentPrefix>[CI Skip]</scmCommentPrefix>
+                            <tagNameFormat>@{project.version}</tagNameFormat>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -584,6 +589,20 @@
             </plugin>
         </plugins>
     </reporting>
+
+    <repositories>
+        <repository>
+            <id>nexus</id>
+            <name>nexus-snapshot</name>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
 
     <distributionManagement>
         <snapshotRepository>
