--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Maven SNAPSHOT Release
+name: Release Version
 
 on:
   push:
@@ -11,21 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
   steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Java Maven release
-        uses: qcastel/github-actions-maven-release@v1.12.41
-        env:
-          JAVA_HOME: /usr/lib/jvm/java-1.8-openjdk/
-        with:
-          git-release-bot-name: "release-bot"
-          git-release-bot-email: "release-bot@microsphere.io"
+    - name: Java Maven release
+      uses: qcastel/github-actions-maven-release@v1.12.41
+      env:
+        JAVA_HOME: /usr/lib/jvm/java-1.8-openjdk/
+      with:
+        git-release-bot-name: "release-bot"
+        git-release-bot-email: "release-bot@microsphere.io"
 
-          maven-args: "--batch-mode --update-snapshots -P release -Drevision=0.0.1-SNAPSHOT clean deploy"
-          maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
+        maven-args: "--batch-mode --update-snapshots -P release -Drevision=0.0.1-SNAPSHOT clean deploy"
+        maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-          gpg-enabled: true
-          gpg-key-id: ${{ secrets.GPG_KEY_ID }}
-          gpg-key: ${{ secrets.GPG_KEY }}
+        gpg-enabled: true
+        gpg-key-id: ${{ secrets.GPG_KEY_ID }}
+        gpg-key: ${{ secrets.GPG_KEY }}
