--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,8 @@ jobs:
         with:
           git-release-bot-name: "release-bot"
           git-release-bot-email: "release-bot@microsphere.io"
-
+          release-branch-name: "main"
+          
           maven-args: "--batch-mode --update-snapshots -P release -Drevision=0.0.1-SNAPSHOT clean deploy"
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
