--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,14 +9,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        java: [ '8' ]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Java ${{ matrix.Java }}
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: ${{ matrix.java }}
+          cache: maven
 
       - name: Java Maven release
         uses: qcastel/github-actions-maven-release@v1.0.3
-        env:
-          JAVA_HOME: /usr/lib/jvm/java-1.8-openjdk/
         with:
           git-release-bot-name: "release-bot"
           git-release-bot-email: "release-bot@microsphere.io"
