--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     </scm>
 
     <properties>
-        <revision>0.0.7</revision>
+        <revision>0.0.7-SNAPSHOT</revision>
         <java.version>8</java.version>
         <resource.delimiter>@</resource.delimiter>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
