--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[CI skip]')"
 
     steps:
       - name: Checkout
@@ -23,7 +24,8 @@ jobs:
           git-release-bot-email: "release-bot@microsphere.io"
           release-branch-name: "main"
 
-          maven-args: "--batch-mode --update-snapshots -e -P release -Dmaven.plugin.validation=VERBOSE -Drevision=0.0.1-SNAPSHOT clean deploy"
+          maven-args: "clean deploy --batch-mode --update-snapshots -P release -Drevision=0.0.1-SNAPSHOT"
+          maven-options: "-DscmCommentPrefix=[CI skip]"
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
