--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,8 @@ jobs:
           git-release-bot-email: "release-bot@microsphere.io"
           release-branch-name: "main"
 
-          maven-args: "clean deploy --batch-mode --update-snapshots -P release -Drevision=0.0.1-SNAPSHOT"
-          maven-options: "-DscmCommentPrefix=[CI skip]"
+          maven-args: "--batch-mode --update-snapshots -P release"
+          maven-options: "-DscmCommentPrefix=[CI skip] -Drevision=0.0.1-SNAPSHOT"
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
