--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           git-release-bot-email: "release-bot@microsphere.io"
           release-branch-name: "main"
 
-          maven-args: "--batch-mode --update-snapshots -P release"
+          maven-args: "--batch-mode --update-snapshots -P release clean deploy"
           maven-options: "-DscmCommentPrefix=[CI skip] -Drevision=0.0.1-SNAPSHOT"
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
