--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           git-release-bot-email: "release-bot@microsphere.io"
           release-branch-name: "main"
 
-          maven-args: "--batch-mode --update-snapshots -P release -DscmCommentPrefix=[CI skip] -Drevision=0.0.1-SNAPSHOT -e clean deploy"
+          maven-args: "--batch-mode --update-snapshots -P release -DscmCommentPrefix=[CI skip] -Drevision=0.0.1-SNAPSHOT -Ddockerfile.skip -DdockerCompose.skip clean deploy"
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
