--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[CI skip]')"
 
     steps:
       - name: Checkout
@@ -24,7 +23,7 @@ jobs:
           git-release-bot-email: "release-bot@microsphere.io"
           release-branch-name: "main"
 
-          maven-args: "--batch-mode --update-snapshots -P release -DscmCommentPrefix=[CI skip] -Drevision=0.0.1-SNAPSHOT -Ddockerfile.skip -DdockerCompose.skip clean deploy"
+          maven-args: "--batch-mode --update-snapshots -e -P release -Dmaven.plugin.validation=VERBOSE -Drevision=0.0.1-SNAPSHOT clean deploy"
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
