[CI Bot] Release 0.0.8

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,7 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>${maven-release-plugin.version}</version>
                     <configuration>
+                        <scmCommentPrefix>[CI Bot]</scmCommentPrefix>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                         <useReleaseProfile>false</useReleaseProfile>
                         <releaseProfiles>release</releaseProfiles>
