--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           git-release-bot-email: "release-bot@microsphere.io"
           release-branch-name: "main"
           maven-args: "--batch-mode --update-snapshots -P release clean deploy"
-          maven-options: "-Drevision=0.0.1-SNAPSHOT -Dmaven.plugin.validation=VERBOSE"
+          maven-options: "-Dmaven.plugin.validation=VERBOSE"
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
