--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           git-release-bot-name: "release-bot"
           git-release-bot-email: "release-bot@microsphere.io"
+          release-branch-name: "release"
 
           maven-args: "--batch-mode --update-snapshots -P release"
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
