--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Maven Build
 
 on:
   push:
@@ -29,4 +29,4 @@ jobs:
           java-version: ${{ matrix.java }}
           cache: maven
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots --file pom.xml clean install
+        run: mvn --batch-mode --update-snapshots --file pom.xml clean package
