--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -21,12 +21,15 @@ jobs:
       matrix:
         java: [ '8', '11', '17', '21' ]
     steps:
-      - uses: actions/checkout@v4
-      - name: Java ${{ matrix.Java }}
+      - name: Checkout Source
+        uses: actions/checkout@v4
+
+      - name: Setup Java ${{ matrix.Java }}
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: ${{ matrix.java }}
           cache: maven
+
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots --file pom.xml clean package
