--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,6 +3,8 @@ name: Maven Publish
 on:
   push:
     branches: [ "release" ]
+  pull_request:
+    branches: [ "release" ]
 
 jobs:
   build:
@@ -14,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Maven Publish
-        uses: qcastel/github-actions-maven-release@v1.12.41
+        uses: qcastel/github-actions-maven-release@master
         env:
           JAVA_HOME: /usr/lib/jvm/java-1.8-openjdk/
         with:
@@ -28,5 +30,5 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
           gpg-enabled: true
-          gpg-key-id: ${{ secrets.OSS_SIGNING_KEY_ID }}
-          gpg-key: ${{ secrets.OSS_SIGNING_KEY }}
+          gpg-key-id: ${{ secrets.GPG_KEY_ID }}
+          gpg-key: ${{ secrets.GPG_KEY }}
