--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -2,11 +2,11 @@ name: Maven Publish
 
 on:
   push:
-    branches: [ "release" ]
+    branches: [ 'release' ]
   workflow_dispatch:
     inputs:
       confirmToPublish:
-        description: "Confirm to publish the Maven Center Repository?"
+        description: 'Confirm to publish the Maven Center Repository?'
         required: true
         type: choice
         default: No
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ inputs.confirmToPublish == 'Yes' }}
+    if: ${{ inputs.confirmToPublish == 'Yes' && !contains(github.event.head_commit.message, '[CI Skip]') }}
 
     steps:
       - name: Checkout Source
@@ -28,11 +28,11 @@ jobs:
         env:
           JAVA_HOME: /usr/lib/jvm/java-1.8-openjdk/
         with:
-          git-release-bot-name: "release-bot"
-          git-release-bot-email: "release-bot@microsphere.io"
-          release-branch-name: "release"
+          git-release-bot-name: 'release-bot'
+          git-release-bot-email: 'release-bot@microsphere.io'
+          release-branch-name: 'release'
 
-          maven-args: "--batch-mode --update-snapshots -P release"
+          maven-args: '--batch-mode --update-snapshots -P release'
           maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
 
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
