--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,8 +8,8 @@ on:
       confirmToPublish:
         description: 'Confirm to publish the Maven Center Repository?'
         required: true
+        default: 'No'
         type: choice
-        default: No
         options:
           - Yes
           - No
