--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -6,15 +6,18 @@ on:
   workflow_dispatch:
     inputs:
       confirmToPublish:
-        description: 'Confirm to publish?'
+        description: 'Confirm to publish the Maven Center Repository?'
         required: true
         default: 'No'
-        type: string
+        type: choice
+        options:
+          - Yes
+          - No
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ inputs.confirmToPublish == 'Yes' && !contains(github.event.head_commit.message, '[CI Skip]') }}
+    if: ${{ !contains(github.event.head_commit.message, '[CI Skip]') }}
 
     steps:
       - name: Checkout Source
