[CI Skip] remove workflow_dispatch

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,17 +3,11 @@ name: Maven Publish
 on:
   push:
     branches: [ 'release' ]
-  workflow_dispatch:
-    inputs:
-      revision:
-        description: 'The version to publish'
-        required: true
-        default: '0.0.1-SNAPSHOT'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ inputs.revision && !contains(github.event.head_commit.message, '[CI Skip]') }}
+    if: ${{ !contains(github.event.head_commit.message, '[CI Skip]') }}
 
     steps:
       - name: Checkout Source
