--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -32,4 +32,4 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots --file pom.xml clean package
+        run: mvn --batch-mode --update-snapshots --file pom.xml install
