--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.microsphere-projects</groupId>
     <artifactId>microsphere-build</artifactId>
-    <version>0.0.22</version>
+    <version>0.0.22-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Microsphere :: Build</name>
